# RustyKeys

./: Cargo.toml  README.md  install.sh  launch_tmpfs.sh
assets/: style.css
src/: app.rs  config.rs  global_input.rs  hyprland.rs  main.rs  sound.rs  theme.rs
