[package]
name = "rusty_keys"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.10" }
libadwaita = { version = "0.8", features = ["v1_4"] }
anyhow = "1"
directories = "5.0"
rodio = "0.20"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
evdev = "0.12"
